# lionzhd

./: .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .prettierrc  CLAUDE.md  DIRECT_DOWNLOAD_LINKS_FEATURE_SPEC.md  Dockerfile  LICENSE  PAGINATION_DEMO.md  README.md  UX_IMPROVEMENTS_PLAN.md  aria2.conf  composer.json  config.py  docker-compose.yml  entrypoint.sh  eslint.config.js  flake.nix  lionz.py  manage.py  opencode.json  package-lock.json  package.json  phpstan.neon  phpunit.xml  pint.json  pnpm-lock.yaml  psalm.xml  pyproject.toml  rector.php  tsconfig.json  vite.config.ts  xtream_client.py
.claude/: settings.local.json
.github/prompts/: react.prompt.md  ui.prompt.md
.github/workflows/: lint.yml  release.yml  tests.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: lionzhd-28.md  refresh-media-vod-streams-unique-num.md  (+1 more)
bootstrap/: app.php  providers.php
config/: app.php  auth.php  auto_episodes.php  data.php  database.php  features.php  ide-helper.php  logging.php  octane.php  pulse.php  saloon.php  scout.php  services.php  telescope.php  typescript-transformer.php
docker/: Caddyfile  Dockerfile  entrypoint.sh
lionzhd/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
routes/: auth.php  console.php  settings.php  web.php
tests/: Pest.php
web/: settings.py  urls.py
(+697 files in other folders)
